cmake_minimum_required(VERSION 3.12)
project(ft_ssl_md5 C)

set(CMAKE_C_STANDARD 11)
set(GCC_COVERAGE_COMPILE_FLAGS "-rdynamic")

include_directories(lib/includes)
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
add_executable(ft_ssl_md5
        lib/ft_printf/bonus_star.c
        lib/ft_printf/char.c
        lib/ft_printf/char_unicode.c
        lib/ft_printf/check_funcs.c
        lib/ft_printf/cnt_bytes.c
        lib/ft_printf/decimal.c
        lib/ft_printf/decimal_parts.c
        lib/ft_printf/float.c
        lib/ft_printf/format_write_funcs.c
        lib/ft_printf/ft_itoa_base.c
        lib/ft_printf/ft_printf.c
        lib/ft_printf/get_var_param.c
        lib/ft_printf/hexadecimal.c
        lib/ft_printf/octodecimal.c
        lib/ft_printf/output_format_funcs.c
        lib/ft_printf/percent.c
        lib/ft_printf/pointer.c
        lib/ft_printf/print_type.c
        lib/ft_printf/service_funcs.c
        lib/ft_printf/string.c
        lib/ft_printf/type_processing.c
        lib/ft_printf/unicode_to_string.c
        lib/ft_printf/unsigned.c
        lib/ft_printf/wrong_var.c
        lib/includes/filler.h
        lib/includes/ft_printf.h
        lib/includes/libft.h
        lib/ft_atoi.c
        lib/ft_bzero.c
        lib/ft_free_str_arr.c
        lib/ft_get_words.c
        lib/ft_isalnum.c
        lib/ft_isalpha.c
        lib/ft_isascii.c
        lib/ft_isdigit.c
        lib/ft_isprint.c
        lib/ft_itoa.c
        lib/ft_lstadd.c
        lib/ft_lstdel.c
        lib/ft_lstdelone.c
        lib/ft_lstfind.c
        lib/ft_lstiter.c
        lib/ft_lstlen.c
        lib/ft_lstmap.c
        lib/ft_lstnew.c
        lib/ft_memalloc.c
        lib/ft_memccpy.c
        lib/ft_memchr.c
        lib/ft_memcmp.c
        lib/ft_memcpy.c
        lib/ft_memdel.c
        lib/ft_memmove.c
        lib/ft_memset.c
        lib/ft_new_str_arr.c
        lib/ft_putchar.c
        lib/ft_putchar_fd.c
        lib/ft_putendl.c
        lib/ft_putendl_fd.c
        lib/ft_putnbr.c
        lib/ft_putnbr_fd.c
        lib/ft_putstr.c
        lib/ft_putstr_fd.c
        lib/ft_realloc.c
        lib/ft_strcat.c
        lib/ft_strchr.c
        lib/ft_strclr.c
        lib/ft_strcmp.c
        lib/ft_strcpy.c
        lib/ft_strdel.c
        lib/ft_strdup.c
        lib/ft_strequ.c
        lib/ft_striter.c
        lib/ft_striteri.c
        lib/ft_strjoin.c
        lib/ft_strlcat.c
        lib/ft_strlen.c
        lib/ft_strmap.c
        lib/ft_strmapi.c
        lib/ft_strncat.c
        lib/ft_strncmp.c
        lib/ft_strncpy.c
        lib/ft_strnequ.c
        lib/ft_strnew.c
        lib/ft_strnstr.c
        lib/ft_strrchr.c
        lib/ft_strsplit.c
        lib/ft_strstr.c
        lib/ft_strsub.c
        lib/ft_strtrim.c
        lib/ft_tolower.c
        lib/ft_toupper.c
        lib/get_next_line.c
        main.c
        ft_ssl_md5.h
        md5.c
        io.c
        init.c sha256.c endians.c md5_rounds.c)
